include/dss_capi.h

    
    /*
    Array of strings ('open' or 'closed') indicating the state of each phase of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Get_State(char*** ResultPtr, int32_t* ResultCount);
    /*
    Array of strings ('open' or 'closed') indicating the state of each phase of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Set_State(char** ValuePtr, int32_t ValueCount);
    /*
    Array of strings ('open' or 'closed') indicating the normal state of each phase of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Get_NormalState(char*** ResultPtr, int32_t* ResultCount);
    /*
    Array of strings ('open' or 'closed') indicating the normal state of each phase of the fuse.
    */
    DSS_CAPI_DLL void Fuses_Set_NormalState(char** ValuePtr, int32_t ValueCount);